[gd_scene load_steps=7 format=3 uid="uid://b4ilk2527ato8"]

[ext_resource type="PackedScene" uid="uid://d11d7pielydy8" path="res://cosmetic_preview.tscn" id="1_jeni7"]
[ext_resource type="Script" path="res://menus/customize_menu.gd" id="1_pv3cl"]
[ext_resource type="Texture2D" uid="uid://bsi82n0dq31aj" path="res://ui/BackButton.png" id="3_q28ko"]

[sub_resource type="LabelSettings" id="LabelSettings_o3nji"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bkaet"]
font_size = 32
font_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fxxvy"]
font_size = 32
font_color = Color(0.6, 0.6, 0.6, 1)

[node name="CustomizeMenu" type="Node"]
script = ExtResource("1_pv3cl")

[node name="PreviewAnchor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -256.0
offset_right = 20.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 0

[node name="CosmeticPreview" parent="PreviewAnchor" instance=ExtResource("1_jeni7")]

[node name="HatSelectMargin" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="HatSelectScroll" type="ScrollContainer" parent="HatSelectMargin"]
custom_minimum_size = Vector2(0, 294)
layout_mode = 2
vertical_scroll_mode = 0

[node name="HatSelect" type="HBoxContainer" parent="HatSelectMargin/HatSelectScroll"]
unique_name_in_owner = true
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -296.0
offset_right = 547.0
offset_bottom = -32.0
grow_vertical = 0
texture_normal = ExtResource("3_q28ko")

[node name="HatInfoDisplay" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.667
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="HatNameLabel" type="Label" parent="HatInfoDisplay"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Hat Name"
label_settings = SubResource("LabelSettings_o3nji")
autowrap_mode = 3

[node name="HatDescriptionLabel" type="Label" parent="HatInfoDisplay"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Hat Description"
label_settings = SubResource("LabelSettings_bkaet")
autowrap_mode = 3

[node name="UnlockHintSeparator" type="HSeparator" parent="HatInfoDisplay"]
layout_mode = 2

[node name="HatUnlockHintLabel" type="Label" parent="HatInfoDisplay"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Unlock Hint"
label_settings = SubResource("LabelSettings_fxxvy")
autowrap_mode = 3

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
